fixing bad com_table creation

--- a/processes/02_data-formatting/04_cleaning -census-data-table.qmd
+++ b/processes/02_data-formatting/04_cleaning -census-data-table.qmd
@@ -73,9 +73,9 @@ com_table <- mutate(com_table,
                       list(
                         pluck(overall_table, "com", com)
                         ),
-                    diocese_tables = 
+                    dioceses_tables = 
                       list(
-                        pluck(overall_table, "dioceses", com)
+                        pluck(overall_table, "dioceses", diocese)
                       ))
 ```
 
