--- a/processes/02_data-formatting/03_make-tidy-census-data-structure_2022-10-05.qmd
+++ b/processes/02_data-formatting/03_make-tidy-census-data-structure_2022-10-05.qmd
@@ -12,7 +12,6 @@ library(here)
 library(vroom)
 library(fs)
 library(purrr)
-library(stringr)
 ```
 
 ## Read csvs
@@ -25,23 +24,8 @@ read_census_csvs <- function(path){
   path_csvs <- dir(path, full.names = TRUE)
   
   tables <- lapply(path_csvs, vroom, show_col_types = FALSE) # additional arg to avoid huge visual clutter
-  table_names <-
-    str_extract(path_csvs, "[^/]+(?=$)") |>
-    str_remove(".csv") |> 
-    str_extract("[^-]+(?=$)")
-
-  names(tables) <- table_names
-  
   
   return(tables)
-}
-
-rename_list <- function(x, paths){
-  new_names <- str_extract(paths, "[^/]+(?=$)")
-  
-  names(x) <- new_names
-  
-  return(x)
 }
 
 ```
@@ -52,9 +36,8 @@ rename_list <- function(x, paths){
 com_path <- here("data", "inputs", "census", "com", "csvs")
 com_dirs <- dir_ls(com_path)
 
-com_tables <-
-  map(com_dirs, read_census_csvs) |>
-  rename_list(com_dirs)
+com_tables <- map(com_dirs, read_census_csvs)
+
 ```
 
 ### Read Nation csvs
@@ -63,9 +46,7 @@ com_tables <-
 nation_path <- here("data", "inputs", "census", "nations", "csvs")
 nation_dirs <- dir_ls(nation_path)
 
-nation_tables <-
-  map(nation_dirs, read_census_csvs) |> 
-  rename_list(nation_dirs)
+nation_tables <- map(nation_dirs, read_census_csvs)
 ```
 
 ### Read Diocese csvs
@@ -74,9 +55,7 @@ nation_tables <-
 dioceses_path <- here("data", "inputs", "census", "dioceses", "csvs")
 dioceses_dirs <- dir_ls(dioceses_path)
 
-dioceses_tables <-
-  map(dioceses_dirs, read_census_csvs) |> 
-  rename_list(dioceses_dirs)
+dioceses_tables <- map(dioceses_dirs, read_census_csvs)
 ```
 
 ## Make big list and save
