--- a/processes/02_data-formatting/04_cleaning-census-data-table.qmd
+++ b/processes/02_data-formatting/04_cleaning-census-data-table.qmd
@@ -15,6 +15,8 @@ library(purrr)
 library(rlang) # for nice error handling
 ```
 
+\
+
 ## Reading in the Overall Table
 
 ```{r read in Overall Table}
@@ -99,15 +101,6 @@ coms_by_nation <- lapply(coms_by_nation, rowwise)
 
 ## Add column to each tibble - recycle the name of the CoM
 
-# some_function <- 
-#       list(
-#         map(tables,
-#             mutate,
-#             # Explicitly using '.env' for clarity, but this will work fine without.
-#             # Note the tibbles comprising coms_by_nation function as the environment here.
-#             com = .env[["com"]]
-#             )
-#       )
 
 
 # coms_by_nation <- 
@@ -120,15 +113,27 @@ coms_by_nation <- lapply(coms_by_nation, rowwise)
 #       )
 #     )
 
+# mutate(across(c(col1, col2), some_function() ))
+
+add_com_column <- function(this_list, com_name){
+  
+  list(
+    map(
+      this_list,
+      mutate,
+      com = com_name
+    ) |> 
+      map(relocate, com)
+    )}
+
 coms_by_nation <- 
    lapply(
      coms_by_nation,
      mutate,
      across(
-       c(com_table, dioceses_tables),
-       function(coms_by_nation){
-         com_table <- mutate()
-       }
+       c(com_tables, dioceses_tables),
+       add_com_column,
+       com_name = com
        )
    )
 ```
