commenting out incompatible bits

--- a/processes/02_data-formatting/04_cleaning-census-data-table.qmd
+++ b/processes/02_data-formatting/04_cleaning-census-data-table.qmd
@@ -120,28 +120,28 @@ coms_by_nation <- lapply(coms_by_nation, rowwise)
 #       )
 #     )
 
-coms_by_nation <- 
-   lapply(
-     coms_by_nation,
-     mutate,
-     across(
-       c(com_table, dioceses_tables),
-       function(coms_by_nation){
-         com_table <- mutate()
-       }
-       )
-   )
+# coms_by_nation <- 
+#    lapply(
+#      coms_by_nation,
+#      mutate,
+#      across(
+#        c(com_table, dioceses_tables),
+#        function(coms_by_nation){
+#          com_table <- mutate()
+#        }
+#        )
+#    )
 ```
 
 Bring new `com` column to the front of each tibble because it's neater.
 
 ```{r reloacteCom}
-coms_by_nation <- lapply(
-  coms_by_nation,
-  mutate,
-  tables =
-    list(map(tables, relocate, com)
-         ))
+# coms_by_nation <- lapply(
+#   coms_by_nation,
+#   mutate,
+#   com_tables =
+#     list(map(com_tables, relocate, com)
+#          ))
 ```
 
 ### Rbind tibbles into long tibbles
