--- a/processes/02_data-formatting/04_cleaning-census-data-table.qmd
+++ b/processes/02_data-formatting/04_cleaning-census-data-table.qmd
@@ -14,6 +14,7 @@ library(vroom)
 library(stringr)
 library(purrr)
 library(rlang) # for nice error handling
+library(lobstr)
 ```
 
 ## Reading in the Overall Table
@@ -59,7 +60,24 @@ clean_com_name <- function(com_name){
     str_replace_all("[:space:]", "-") # spaces to hypens
 }
 
-com_table <- mutate(com_table, com = clean_com_name(com))
+clean_diocese_name <- function(diocese_name){
+  str_squish(diocese_name) |> 
+    str_to_title() |> 
+    str_replace_all("&", "and") |>
+    str_replace_all(" And ", " and ") |> 
+    str_remove_all("[:punct:]") |> 
+    str_replace_all("[:space:]", "-")
+}
+
+clean_nation_name <- function(nation_name){
+  str_squish(nation_name) |> 
+    str_replace_all("[:space:]", "-")
+}
+
+com_table <- mutate(com_table, 
+                    com     = clean_com_name(com),
+                    diocese = clean_diocese_name(diocese),
+                    nation  = clean_nation_name(nation))
 ```
 
 ### 'Join' CoM data to overall_table and split
@@ -97,32 +115,52 @@ rm(nations)
 
 ### Mutate and Rbind tibble lists
 
+#### Add com, diocese and nation columns to each tibble
+
 Add a field to each tibble in `coms_by_nation` containing the name of the CoM. We'll need this to know which CoM is which once we `rbind()` the tibbles together.
 
 ```{r addComField}
 coms_by_nation <- lapply(coms_by_nation, rowwise)
 
-add_com_column <- function(this_list, com_name){
+add_column <- function(this_list, col_name, value){
+  
+  col_name <- enexpr(col_name)
   
   list(
     map(
       this_list,
       mutate,
-      com = com_name
+      !!col_name := value
     ) |> 
-      map(relocate, com)
+      map(relocate, !!col_name)
     )}
+
+coms_by_nation <- 
+  lapply(
+    coms_by_nation,
+    mutate,
+    across(
+      c(com_tables, dioceses_tables, nations_tables),
+      add_column, nation, nation
+    )
+  )
+
+coms_by_nation <- 
+  lapply(
+    coms_by_nation,
+    mutate,
+    across(
+      c(com_tables, dioceses_tables),
+      add_column, diocese, diocese
+      )
+  )
 
 coms_by_nation <- 
    lapply(
      coms_by_nation,
      mutate,
-     across(
-       c(com_tables, dioceses_tables, nations_tables),
-       add_com_column,
-       com_name = com
-       )
-   )
+     com_tables = add_column(com_tables, com, com)
+     )
 ```
 
 ### Rbind tibbles into long tibbles
@@ -134,14 +172,15 @@ This process revealed a data quality issue: inconsistent names for Llandaff CoM'
 A little wrapper around `rbind()` that we can use to ignore bad calls and passes a warning (or, optionally, an error)
 
 ```{r rbindWarner}
-rbind_warn <- function(x, y, just_warn = TRUE){
+rbind_warn <- function(x, y){
   
   tryCatch(
     expr = {rbind(x,y)},
     error = function(cnd){
-      
       bad.names <- names(y)[!names(y) %in% names(x)]
-      warning("Rbind unsucessful in ", unique(y[["com"]]),
+      warning("Rbind unsucessful in ",
+              str_c(unique(y[["nation"]]), unique(y[["diocese"]]), unique(y[["com"]]),
+                    sep = ":"),
               "\nThe following names were not r-bindable:",
               "\n* ", 
               str_c(bad.names, collapse = "\n* "),
@@ -158,7 +197,19 @@ rbind_warn <- function(x, y, just_warn = TRUE){
 
 make_long_tables <- function(x){
   
-  tables_to_bind <- select(x, com_tables, dioceses_tables, nations_tables)
+  tables_to_bind <- 
+    list(
+      com      =
+        pull(x, com_tables),
+      dioceses = 
+        group_by(x, diocese) |> 
+        summarise(dioceses_tables = unique(dioceses_tables)) |> 
+        pull(),
+      nations  = 
+        group_by(x, nation) |> 
+        summarise(nations_tables = unique(nations_tables)) |> 
+        pull()
+    )
 
   map(tables_to_bind,
     ~ pmap(.x, list) |>
@@ -167,6 +218,7 @@ make_long_tables <- function(x){
 }
 
 coms_by_nation <- map(coms_by_nation, make_long_tables)
+lobstr::tree(coms_by_nation, max_depth = 3)
 ```
 
 ## Save data
